--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "",
-    "version": "",
-    "description": "",
-    "dependencies": {
-        "virtual-dom": "2.0.1"
-    }
+  "name": "",
+  "version": "",
+  "description": "",
+  "dependencies": {
+    "virtual-dom": "git://github.com/ajnsit/virtual-dom-polymer"
+  }
 }
